--- a/template.tex
+++ b/template.tex
@@ -3,13 +3,13 @@
 %\documentclass[letterpaper,currency=euro]{invoicecls}
 %\documentclass[letterpaper,currency=pound]{invoicecls}
 
-\newcommand{\invoiceNo}{ $invoiceNo$ }
+\newcommand{\invoiceNo}{$invoiceNo$}
 \newcommand{\duein}{$dueDateMonthOffset$}% Months
 
 \newcommand{\me}{ $myCompany$ }
 \newcommand{\clientName}{ $clientName$ }
 
-\setmetadata{\me}{$myCompany$}{\invoiceNo}{\clientName}
+\setmetadata{\me}{\invoiceNo}
 
 \defaultfontfeatures{ Path = ./Fonts/ }
 \usepackage{fontawesome}
