--- a/template.tex
+++ b/template.tex
@@ -47,7 +47,7 @@
 
     \beginsummary
     \summaryline{Total}{\currencysym\formatcurrency{\InvoiceTotal}}
-    \summaryline{VAT 0\% \tiny *Article 44 VAT directive}{\currencysym\formatcurrency{0}}
+    \summaryline{VAT 0\% \scriptsize *Article 44 VAT directive}{\currencysym\formatcurrency{0}}
     \summaryline{Balance Due}{\currencysym\formatcurrency{\InvoiceTotal}}
 \end{hoursItemization}
 
