--- a/template.tex
+++ b/template.tex
@@ -26,8 +26,8 @@
 
 \twocolumnlayout{
     \begin{infoSection}{Client}
-        $for(to)$
-        \infoBox{$to$}
+        $for(client)$
+        \infoBox{$client$}
         $endfor$
     \end{infoSection}
 }{
